--- a/individual_work/css-flex-1/style.css
+++ b/individual_work/css-flex-1/style.css
@@ -1,3 +1,54 @@
+
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: normal;
+  align-items: center;
+  align-content:space-between;
+  background-color: blueviolet;
+  border-style:solid;
+  padding: 10px;
+  align-self: center;
+  justify-content: center;
+  justify-items: center;
+
+}
+
+.flex-items {
+  display: flex;
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: auto;
+  align-self: center;
+  order: 0;
+  height: 250px;
+  border-style: solid;
+  width: 100%;
+  margin: 10px;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Box sizing rules */
 *,
 *::before,
