--- a/individual_work/css-flex-1/style.css
+++ b/individual_work/css-flex-1/style.css
@@ -1,18 +1,22 @@
+.nejvycVysokyVyssyDiv{
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  flex-direction: row;
+  align-content: center;
+  align-items: center;
+  align-self: center;
+}
 
 .flex-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: normal;
-  align-items: center;
-  align-content:space-between;
-  background-color: blueviolet;
-  border-style:solid;
   padding: 10px;
-  align-self: center;
-  justify-content: center;
-  justify-items: center;
-
+  display:flex;
+  flex-direction: row;
+  flex-wrap:nowrap;
+  justify-content: space-around;
+  align-content: center;
+  width: 1200px;
+  background-color:lightgray;
 }
 
 .flex-items {
@@ -20,15 +24,17 @@
   flex-grow: 0;
   flex-shrink: 1;
   flex-basis: auto;
-  align-self: center;
+  align-self: auto;
   order: 0;
   height: 250px;
-  border-style: solid;
   width: 100%;
   margin: 10px;
   align-items: center;
   justify-content: center;
   justify-items: center;
+  background-color:wheat;
+  
+
 
 }
 
