--- a/individual_work/iw-css-flex-2/style.css
+++ b/individual_work/iw-css-flex-2/style.css
@@ -74,21 +74,30 @@
 
 .content
 {
-    height: 88%;
+    top: 0;
+    position:absolute;
+    height: 100%;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-
+    justify-items: center;
+    align-content: center;
 }
 
 #div1
 {
+    
     width: 50%;
     background-color: white;
     border-radius: 15px 15px;
     padding: 20px 20px;
-    margin-bottom: 12vh;
+
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    align-content: center;
+
     
     -webkit-box-shadow:0px 0px 43px 5px rgba(255,255,255,0.85);
     -moz-box-shadow: 0px 0px 43px 5px rgba(255,255,255,0.85);
