--- a/individual_work/pololetni-prace/mobile.css
+++ b/individual_work/pololetni-prace/mobile.css
@@ -1,6 +1,5 @@
+@media only screen and(max-width: 480px){
 
-
-    
 .container 
 {
     height: 100vh;
@@ -20,7 +19,7 @@
     background-color: rgba(38, 32, 62, 0.8);
     display: flex;
     justify-content:center;
-    
+    flex-wrap: wrap;
 }
 
 .menu
@@ -138,7 +137,7 @@
 
 .indexImage{
     display: flex;
-    width: 100%;
+    width: 120%;
     height: 100%;
     flex-direction: row;
     justify-content: center;
@@ -217,3 +216,7 @@ align-content: center;
 
 
 
+
+
+
+}
