--- a/individual_work/madera-2c-web-figma-1/styles/style.css
+++ b/individual_work/madera-2c-web-figma-1/styles/style.css
@@ -1,2 +1,119 @@
-@import url(_header.scss);
+.index-container {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  justify-items: center;
+  background-color: #F8F7EC80;
+}
+
+h1 {
+  font-size: 1.25rem;
+}
+
+h2 {
+  font-size: 0.688;
+}
+
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #CBC1B1;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header #logo {
+  margin-left: 8%;
+  height: 50%;
+}
+
+.header #burger {
+  height: 90%;
+  margin-right: 15%;
+}
+
+.index-container {
+  background-color: rgba(248, 247, 236, 0.5);
+}
+
+.gray-box {
+  margin-top: 15%;
+  margin-left: 10%;
+  margin-right: 10%;
+  background-color: #7C7474;
+  color: #F8F7EC;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  justify-items: center;
+}
+
+.gray-box .gray-text-box {
+  margin: 5%;
+  font-size: 0.813rem;
+}
+
+.gray-box .gray-button {
+  background-color: rgba(248, 247, 236, 0.3);
+  color: black;
+  margin-bottom: 5%;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
+.gray-box .gray-button h2 {
+  font-size: .688;
+}
+
+.footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #CBC1B1;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  justify-items: center;
+  text-align: center;
+}
 /*# sourceMappingURL=style.css.map */
