--- a/individual_work/madera-2c-web-figma-1/styles/_footer.scss
+++ b/individual_work/madera-2c-web-figma-1/styles/_footer.scss
@@ -3,13 +3,15 @@
 display: flex;
 background-color: $light-gray;
 width: 100%;
+height: 10vh;
 justify-content: space-between;
-flex-direction: row;
+flex-direction: column;
 @include full-center-align;
 text-align: center;
+
  h2
  {
-
+    font-size: 0.75rem;
 
 
  }
