--- a/individual_work/madera-2c-web-figma-1/styles/_mobile-header.scss
+++ b/individual_work/madera-2c-web-figma-1/styles/_mobile-header.scss
@@ -3,6 +3,7 @@
 display: flex;
 background-color: $light-gray;
 width: 100%;
+height: 10vh;
 justify-content: space-between;
 flex-direction: row;
 align-items: center;
@@ -10,11 +11,11 @@ align-items: center;
 #logo
 {
     margin-left: 8%;
-    height: 50%;
+    height: 100%;
  }
  #burger
  {
-    height: 90%;
+    height: 50%;
     margin-right: 15%;
  }
 }
