--- a/individual_work/madera-2c-web-figma-1/styles/_mobile-index-content.scss
+++ b/individual_work/madera-2c-web-figma-1/styles/_mobile-index-content.scss
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: column;
     @include full-center-align;
-    
+    padding: 5%;
     .gray-text-box
     {
         margin: 5%;
