--- a/individual_work/madera-2c-web-figma-1/styles/style.scss
+++ b/individual_work/madera-2c-web-figma-1/styles/style.scss
@@ -16,6 +16,18 @@ $button-color: rgba(248, 247, 236, 0.3);
     @include full-center-align();
     background-color: #F8F7EC80;
 }   
+h1, h2, h3
+{
+font-family: Lato;
+font-style: normal;
+display: flex;
+align-items: center;
+text-align: center;
+letter-spacing: 0.1em;
+text-transform: uppercase;
+
+
+}
 h1
 {
     font-size: 1.25rem;
