--- a/individual_work/madera-2c-web-figma-1/styles/_mobile-index-content.scss
+++ b/individual_work/madera-2c-web-figma-1/styles/_mobile-index-content.scss
@@ -1,6 +1,36 @@
 .index-container
 {
     background-color: rgba(248, 247, 236, 0.5);
+
+    .gray-button-2
+{   
+    background-color:$button-color ;
+    $white:#F8F7EC;
+    margin-bottom: 5%;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 2%;
+    h2
+    {
+        font-size: .688;
+
+    }
+}
+}
+
+.gray-button
+{   
+    background-color:$button-color ;
+    $white:#F8F7EC;
+    margin-bottom: 5%;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 2%;
+    h2
+    {
+        font-size: .688;
+
+    }
 }
 
 .gray-box
@@ -15,29 +45,15 @@
     flex-direction: column;
     @include full-center-align;
     padding: 5%;
+
+  
+
     .gray-text-box
     {
         margin: 5%;
         font-size: 0.813rem;
 
     }
-
-    .gray-button
-    {   
-        background-color:$button-color ;
-        color: black;
-        margin-bottom: 5%;
-        padding-left: 10%;
-        padding-right: 10%;
-    
-        h2
-        {
-            font-size: .688;
-
-        }
-    }
-
-  
 
 }
 
@@ -65,23 +81,52 @@
     {
         display: flex;
         flex-direction: row;
-
+        width: 100vw;
 
         .image-column
         {
             display: flex;
             flex-direction: column;
-            width: 50%;
+            width: 35%;
+            margin-left: 10%;
+            margin-right: 5%;
 
+            img
+            {
+                margin-bottom: 15%;
+
+            }
         }
         
         .text-column
         {
             display: flex;
             flex-direction: column;
-            width: 50%;
+            width: 65%;
 
+            h3
+            {
+                font-size: 0.75rem;
+            }
+            p
+            {
+                font-size: 0.625rem;
+            }
+
+           :nth-child(1)
+           {
+                margin-top: 5%;
+
+           }
+            .offer-text
+            {
+                margin-bottom:25%;
+
+
+            }
         }
 
     }
+  
+
 }
