--- a/individual_work/madera-2c-web-figma-1/styles/style.css
+++ b/individual_work/madera-2c-web-figma-1/styles/style.css
@@ -63,6 +63,26 @@ h2 {
   .index-container {
     background-color: rgba(248, 247, 236, 0.5);
   }
+  .index-container .gray-button-2 {
+    background-color: rgba(248, 247, 236, 0.3);
+    margin-bottom: 5%;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 2%;
+  }
+  .index-container .gray-button-2 h2 {
+    font-size: .688;
+  }
+  .gray-button {
+    background-color: rgba(248, 247, 236, 0.3);
+    margin-bottom: 5%;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 2%;
+  }
+  .gray-button h2 {
+    font-size: .688;
+  }
   .gray-box {
     margin-top: 15%;
     margin-left: 10%;
@@ -90,16 +110,6 @@ h2 {
   .gray-box .gray-text-box {
     margin: 5%;
     font-size: 0.813rem;
-  }
-  .gray-box .gray-button {
-    background-color: rgba(248, 247, 236, 0.3);
-    color: black;
-    margin-bottom: 5%;
-    padding-left: 10%;
-    padding-right: 10%;
-  }
-  .gray-box .gray-button h2 {
-    font-size: .688;
   }
   .index-second-half {
     display: -webkit-box;
@@ -137,6 +147,7 @@ h2 {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+    width: 100vw;
   }
   .index-second-half .offer-container .image-column {
     display: -webkit-box;
@@ -146,7 +157,12 @@ h2 {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    width: 50%;
+    width: 35%;
+    margin-left: 10%;
+    margin-right: 5%;
+  }
+  .index-second-half .offer-container .image-column img {
+    margin-bottom: 15%;
   }
   .index-second-half .offer-container .text-column {
     display: -webkit-box;
@@ -156,7 +172,19 @@ h2 {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    width: 50%;
+    width: 65%;
+  }
+  .index-second-half .offer-container .text-column h3 {
+    font-size: 0.75rem;
+  }
+  .index-second-half .offer-container .text-column p {
+    font-size: 0.625rem;
+  }
+  .index-second-half .offer-container .text-column :nth-child(1) {
+    margin-top: 5%;
+  }
+  .index-second-half .offer-container .text-column .offer-text {
+    margin-bottom: 25%;
   }
   .footer {
     display: -webkit-box;
@@ -218,6 +246,26 @@ h2 {
   .index-container {
     background-color: rgba(248, 247, 236, 0.5);
   }
+  .index-container .gray-button-2 {
+    background-color: rgba(248, 247, 236, 0.3);
+    margin-bottom: 5%;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 2%;
+  }
+  .index-container .gray-button-2 h2 {
+    font-size: .688;
+  }
+  .gray-button {
+    background-color: rgba(248, 247, 236, 0.3);
+    margin-bottom: 5%;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 2%;
+  }
+  .gray-button h2 {
+    font-size: .688;
+  }
   .gray-box {
     margin-top: 15%;
     margin-left: 10%;
@@ -245,16 +293,6 @@ h2 {
   .gray-box .gray-text-box {
     margin: 5%;
     font-size: 0.813rem;
-  }
-  .gray-box .gray-button {
-    background-color: rgba(248, 247, 236, 0.3);
-    color: black;
-    margin-bottom: 5%;
-    padding-left: 10%;
-    padding-right: 10%;
-  }
-  .gray-box .gray-button h2 {
-    font-size: .688;
   }
   .index-second-half {
     display: -webkit-box;
@@ -292,6 +330,7 @@ h2 {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+    width: 100vw;
   }
   .index-second-half .offer-container .image-column {
     display: -webkit-box;
@@ -301,7 +340,12 @@ h2 {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    width: 50%;
+    width: 35%;
+    margin-left: 10%;
+    margin-right: 5%;
+  }
+  .index-second-half .offer-container .image-column img {
+    margin-bottom: 15%;
   }
   .index-second-half .offer-container .text-column {
     display: -webkit-box;
@@ -311,7 +355,19 @@ h2 {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    width: 50%;
+    width: 65%;
+  }
+  .index-second-half .offer-container .text-column h3 {
+    font-size: 0.75rem;
+  }
+  .index-second-half .offer-container .text-column p {
+    font-size: 0.625rem;
+  }
+  .index-second-half .offer-container .text-column :nth-child(1) {
+    margin-top: 5%;
+  }
+  .index-second-half .offer-container .text-column .offer-text {
+    margin-bottom: 25%;
   }
   .footer {
     display: -webkit-box;
