--- a/individual_work/madera-2c-web-figma-1/styles/style.css
+++ b/individual_work/madera-2c-web-figma-1/styles/style.css
@@ -9,6 +9,13 @@
           justify-content: center;
   justify-items: center;
   background-color: #F8F7EC80;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 h1, h2, h3 {
@@ -64,17 +71,42 @@ h2 {
     background-color: rgba(248, 247, 236, 0.5);
   }
   .index-container .gray-button-2 {
-    background-color: rgba(248, 247, 236, 0.3);
-    margin-bottom: 5%;
-    padding-left: 10%;
-    padding-right: 10%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 40%;
+    background-color: #7C7474;
+    color: #F8F7EC;
+    margin-bottom: 4%;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-bottom: 2%;
     padding-top: 2%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
   }
   .index-container .gray-button-2 h2 {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
     font-size: .688;
   }
   .gray-button {
     background-color: rgba(248, 247, 236, 0.3);
+    color: #F8F7EC;
     margin-bottom: 5%;
     padding-left: 10%;
     padding-right: 10%;
@@ -247,17 +279,42 @@ h2 {
     background-color: rgba(248, 247, 236, 0.5);
   }
   .index-container .gray-button-2 {
-    background-color: rgba(248, 247, 236, 0.3);
-    margin-bottom: 5%;
-    padding-left: 10%;
-    padding-right: 10%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 40%;
+    background-color: #7C7474;
+    color: #F8F7EC;
+    margin-bottom: 4%;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-bottom: 2%;
     padding-top: 2%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
   }
   .index-container .gray-button-2 h2 {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
     font-size: .688;
   }
   .gray-button {
     background-color: rgba(248, 247, 236, 0.3);
+    color: #F8F7EC;
     margin-bottom: 5%;
     padding-left: 10%;
     padding-right: 10%;
