--- a/individual_work/madera-2c-web-figma-1/styles/_mobile-header.scss
+++ b/individual_work/madera-2c-web-figma-1/styles/_mobile-header.scss
@@ -8,14 +8,21 @@ justify-content: space-between;
 flex-direction: row;
 align-items: center;
 
-#logo
+}
+
+.logo
 {
     margin-left: 8%;
     height: 100%;
- }
- #burger
+    img
+    {
+       height: 100%;
+    }
+}
+ 
+ .burger
  {
+    margin-top: 5%;
     height: 50%;
     margin-right: 15%;
  }
-}
