--- a/individual_work/madera-2c-web-figma-1/styles/_mobile-index-content.scss
+++ b/individual_work/madera-2c-web-figma-1/styles/_mobile-index-content.scss
@@ -1,4 +1,4 @@
-.index-container
+.container
 {
     
     background-color: rgba(248, 247, 236, 0.5);
@@ -47,7 +47,7 @@
     margin-left: 10%;
     margin-right: 10%;
 
-    background-color: $dark-gray;
+    background-color:#7C7474;
     color: $white;
     display: flex;
     flex-direction: column;
