--- a/individual_work/madera-2c-web-figma-1/styles/_mobile-contacts-content.scss
+++ b/individual_work/madera-2c-web-figma-1/styles/_mobile-contacts-content.scss
@@ -1,3 +1,17 @@
+#contact-headline
+{
+    display: flex;
+    flex-direction: row;
+    @include full-center-align;
+    margin-top: 15%;
+    margin-bottom: 10%;
+
+}
+.content
+{
+    width: 100%;
+    height: 100%;
+}
 
 .contact-container
     {
@@ -6,13 +20,22 @@
         width: 100%;
         flex-direction: column;
        
-
+        :nth-child(5)
+        {
+            padding-bottom: 30%;
+            margin-bottom: 15%;
+        }
     }    
     .contact-info
     {
         display: flex;
+        flex-direction: row;
         background-color:#7C747430 ;
         width: 80%;
-        margin: 10%;
+        margin: 3%;
         font-size: 0.688rem;
+        padding: 2%;
+        padding-right: 50%;
+
+       
     }
