--- a/individual_work/madera-2c-web-figma-1/styles/style.scss
+++ b/individual_work/madera-2c-web-figma-1/styles/style.scss
@@ -17,6 +17,7 @@ $button-color: rgba(248, 247, 236, 0.3);
     background-color: #F8F7EC80;
     display: flex;
     flex-direction: column;
+    height: 100%;
 }   
 h1, h2, h3
 {
