--- a/individual_work/madera-2c-web-figma-1/styles/_footer.scss
+++ b/individual_work/madera-2c-web-figma-1/styles/_footer.scss
@@ -8,7 +8,7 @@ justify-content: space-between;
 flex-direction: column;
 @include full-center-align;
 text-align: center;
-
+align-self: flex-end;
  h2
  {
     font-size: 0.75rem;
