--- a/individual_work/madera-2c-web-figma-1/styles/_mobile-contacts-content.scss
+++ b/individual_work/madera-2c-web-figma-1/styles/_mobile-contacts-content.scss
@@ -1,3 +1,41 @@
+
+.contact-container-0
+{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+
+}
+.gray-button-3
+{
+    display: flex;
+    @include full-center-align;
+
+    .my-existance-is-miserable
+    {
+        display: flex;
+        @include full-center-align;
+        background-color: #7C7474;
+        color: $white;
+        margin-bottom: 20%;
+        padding-left: 2%;
+        padding-right: 2%;
+        padding-bottom: 2%;
+        padding-top: 2%;
+        width: 40%;
+      
+        h2
+        {
+            @include full-center-align;
+            font-size: .688;
+            
+        }
+
+
+    }
+   
+}
+
 #contact-headline
 {
     display: flex;
@@ -11,6 +49,7 @@
 {
     width: 100%;
     height: 100%;
+    @include full-center-align;
 }
 
 .contact-container
@@ -19,7 +58,7 @@
         @include full-center-align;
         width: 100%;
         flex-direction: column;
-       
+        
         :nth-child(5)
         {
             padding-bottom: 30%;
