--- a/individual_work/madera-2c-web-figma-1/styles/style.scss
+++ b/individual_work/madera-2c-web-figma-1/styles/style.scss
@@ -41,20 +41,22 @@ h2
     font-size: 0.688rem;
 }
 
+
 @media screen and(max-width: 480px)
 {
 @import "mobile-header";
 @import "mobile-index-content";
 @import "footer";
 @import "mobile-contacts-content";
+@import "mobile-info-content";
 }
 
 @media screen and(min-width: 481px)
 {
-    @import "mobile-header";
-    @import "mobile-index-content";
+    @import "pc-header";
+    @import "pc-index";
     @import "footer";
     @import "mobile-contacts-content";
 
-    }
+}
     
