--- a/individual_work/madera-2c-web-figma-1/styles/_pc-header.scss
+++ b/individual_work/madera-2c-web-figma-1/styles/_pc-header.scss
@@ -9,12 +9,27 @@ flex-direction: row;
 align-items: center;
 
 }
+.selected
+{
+   background-color: #7C747430;
+}
+
 
 .expanded-menu
 {
    display: flex;
+   height: 50%;
+   width: 50%;
+   margin-right: 5%;
+   @include full-center-align;
    a
    {
+      display: flex;
+      text-decoration: none;
+      margin-right: 2rem;
+      padding: 2%;
+      color: black;
+      height: 100%;
       h3
       {
          text-decoration: none;
