--- a/individual_work/madera-2c-web-figma-1/styles/style.css
+++ b/individual_work/madera-2c-web-figma-1/styles/style.css
@@ -20,7 +20,7 @@
 }
 
 h1, h2, h3 {
-  font-family: Lato;
+  font-family: 'Lato', sans-serif;
   font-style: normal;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -386,6 +386,13 @@ h2 {
     padding-right: 50%;
   }
   .info-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     height: 80vh;
   }
   .parent {
@@ -543,10 +550,35 @@ h2 {
         -ms-flex-align: center;
             align-items: center;
   }
+  .selected {
+    background-color: #7C747430;
+  }
   .expanded-menu {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    height: 50%;
+    width: 50%;
+    margin-right: 5%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
+  }
+  .expanded-menu a {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    text-decoration: none;
+    margin-right: 2rem;
+    padding: 2%;
+    color: black;
+    height: 100%;
   }
   .expanded-menu a h3 {
     text-decoration: none;
@@ -560,6 +592,209 @@ h2 {
   }
   .burger {
     display: none;
+  }
+  .index-image {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    background-image: url("/images/hero image.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 90vh;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -ms-flex-line-pack: end;
+        align-content: flex-end;
+  }
+  .container {
+    background-color: rgba(248, 247, 236, 0.5);
+  }
+  .container .gray-button-2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 20%;
+    background-color: #7C7474;
+    color: #F8F7EC;
+    margin-bottom: 5%;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-bottom: 2%;
+    padding-top: 2%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
+  }
+  .container .gray-button-2 h2 {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
+    font-size: 1.125rem;
+  }
+  .gray-button {
+    background-color: #7C7474;
+    color: #F8F7EC;
+    margin-bottom: 5%;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+  }
+  .gray-button h2 {
+    font-size: .688;
+  }
+  .gray-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 40%;
+    height: 60%;
+    margin-top: 15%;
+    margin-right: 5%;
+    margin-bottom: 10%;
+    background-color: #7C747430;
+    color: #F8F7EC;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+  .gray-box h1 {
+    margin-top: 5%;
+    font-size: 3rem;
+  }
+  .gray-box .gray-text-box {
+    width: 90%;
+    margin: 5%;
+    font-size: 1.5rem;
+  }
+  .index-second-half {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100vw;
+  }
+  .index-second-half .headline-3 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    font-size: 2.25rem;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
+    margin-top: 10%;
+    margin-bottom: 10%;
+  }
+  .index-second-half .offer-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100vw;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
+  }
+  .index-second-half .offer-container .image-column {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 5%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
+  }
+  .index-second-half .offer-container .image-column img {
+    margin-right: 5%;
+  }
+  .index-second-half .offer-container .text-column {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    width: 65%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
+    margin-top: 1%;
+  }
+  .index-second-half .offer-container .text-column h3 {
+    font-size: 1.5rem;
+  }
+  .index-second-half .offer-container .text-column p {
+    font-size: 1.125rem;
+  }
+  .index-second-half .offer-container .text-column .offer-text {
+    margin-left: 5%;
+    margin-bottom: 5%;
   }
   .footer {
     display: -webkit-box;
@@ -719,6 +954,104 @@ h2 {
     font-size: 0.688rem;
     padding: 2%;
     padding-right: 50%;
+  }
+  .parent {
+    margin-top: 20%;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[9];
+        grid-template-columns: repeat(9, 1fr);
+    -ms-grid-rows: (1fr)[5];
+        grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 1%;
+    grid-row-gap: 30%;
+  }
+  .div1 {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  .div2 {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 2;
+    grid-area: 1 / 2 / 2 / 4;
+  }
+  .div3 {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 4;
+    -ms-grid-column-span: 1;
+    grid-area: 1 / 4 / 2 / 5;
+  }
+  .div4 {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 5;
+    -ms-grid-column-span: 2;
+    grid-area: 1 / 5 / 2 / 7;
+  }
+  .div5 {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 7;
+    -ms-grid-column-span: 1;
+    grid-area: 1 / 7 / 2 / 8;
+  }
+  .div6 {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 8;
+    -ms-grid-column-span: 2;
+    grid-area: 1 / 8 / 2 / 10;
+  }
+  .div7 {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-area: 2 / 1 / 3 / 2;
+  }
+  .div8 {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 2;
+    grid-area: 2 / 2 / 3 / 4;
+  }
+  .div9 {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 4;
+    -ms-grid-column-span: 1;
+    grid-area: 2 / 4 / 3 / 5;
+  }
+  .div10 {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 5;
+    -ms-grid-column-span: 2;
+    grid-area: 2 / 5 / 3 / 7;
+  }
+  .div11 {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 7;
+    -ms-grid-column-span: 1;
+    grid-area: 2 / 7 / 3 / 8;
+  }
+  .div12 {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 8;
+    -ms-grid-column-span: 2;
+    grid-area: 2 / 8 / 3 / 10;
+  }
+  .info-headline {
+    padding: 5%;
   }
 }
 /*# sourceMappingURL=style.css.map */
