FINAL COMMIT, ITS DONE o_o

--- a/individual_work/madera-2c-web-figma-1/styles/style.scss
+++ b/individual_work/madera-2c-web-figma-1/styles/style.scss
@@ -56,7 +56,7 @@ h2
     @import "pc-header";
     @import "pc-index";
     @import "footer";
-    @import "mobile-contacts-content";
+    @import "pc-contacts";
     @import "pc-info";
 }
     
