--- a/individual_work/madera-2c-web-figma-1/styles/_pc-info.scss
+++ b/individual_work/madera-2c-web-figma-1/styles/_pc-info.scss
@@ -21,7 +21,12 @@
     .div12 { grid-area: 2 / 8 / 3 / 10; }
     .info-headline
     {
-            padding: 5%;
+        margin-top: 10%;
+        padding: 5%;
 
+    }
+    .info-content
+    {
+        height: 80vh;
 
     }
