--- a/individual_work/madera-2c-web-figma-1/styles/style.css
+++ b/individual_work/madera-2c-web-figma-1/styles/style.css
@@ -826,16 +826,6 @@ h2 {
   .footer h2 {
     font-size: 0.75rem;
   }
-  .contact-container-0 {
-    height: 100vh;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
   .gray-button-3 {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -865,12 +855,9 @@ h2 {
     justify-items: center;
     background-color: #7C7474;
     color: #F8F7EC;
-    margin-bottom: 20%;
-    padding-left: 2%;
-    padding-right: 2%;
-    padding-bottom: 2%;
-    padding-top: 2%;
-    width: 40%;
+    margin-bottom: 5%;
+    padding: 1%;
+    width: 15%;
   }
   .gray-button-3 .my-existance-is-miserable h2 {
     -webkit-box-align: center;
@@ -882,7 +869,11 @@ h2 {
         -ms-flex-pack: center;
             justify-content: center;
     justify-items: center;
-    font-size: .688;
+    font-size: 1.125rem;
+  }
+  .thicc-box-2 {
+    width: 100%;
+    height: 150%;
   }
   #contact-headline {
     display: -webkit-box;
@@ -901,12 +892,14 @@ h2 {
         -ms-flex-pack: center;
             justify-content: center;
     justify-items: center;
-    margin-top: 15%;
-    margin-bottom: 10%;
+    margin-top: 5%;
+    margin-bottom: 1%;
   }
-  .content {
+  #contact-headline h1 {
+    font-size: 3rem;
+  }
+  .contact-content {
     width: 100%;
-    height: 100%;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -916,29 +909,11 @@ h2 {
         -ms-flex-pack: center;
             justify-content: center;
     justify-items: center;
-  }
-  .contact-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -ms-flex-line-pack: center;
-        align-content: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    justify-items: center;
-    width: 100%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-  }
-  .contact-container :nth-child(5) {
-    padding-bottom: 30%;
-    margin-bottom: 15%;
+    height: 75vh;
   }
   .contact-info {
     display: -webkit-box;
@@ -950,10 +925,83 @@ h2 {
             flex-direction: row;
     background-color: #7C747430;
     width: 80%;
-    margin: 3%;
-    font-size: 0.688rem;
+    font-size: 1rem;
     padding: 2%;
     padding-right: 50%;
+    width: 90%;
+  }
+  .centering-contact-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
+    height: 60%;
+  }
+  .contact-container {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (50%)[2];
+        grid-template-columns: repeat(2, 50%);
+    -ms-grid-rows: (40%)[5];
+        grid-template-rows: repeat(5, 40%);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    width: 70%;
+  }
+  .contact-container :nth-child(1) {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  .contact-container :nth-child(2) {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-area: 1 / 2 / 2 / 3;
+  }
+  .contact-container :nth-child(3) {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-area: 2 / 1 / 3 / 2;
+  }
+  .contact-container :nth-child(4) {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-area: 2 / 2 / 3 / 3;
+  }
+  .contact-container :nth-child(5) {
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 4;
+    grid-area: 3 / 1 / 5 / 5;
+    width: 95%;
+    height: 120%;
+    margin-top: 4%;
   }
   .parent {
     margin-top: 20%;
@@ -1051,7 +1099,11 @@ h2 {
     grid-area: 2 / 8 / 3 / 10;
   }
   .info-headline {
+    margin-top: 10%;
     padding: 5%;
+  }
+  .info-content {
+    height: 80vh;
   }
 }
 /*# sourceMappingURL=style.css.map */
