--- a/individual_work/madera-2c-web-figma-1/styles/_pc-index.scss
+++ b/individual_work/madera-2c-web-figma-1/styles/_pc-index.scss
@@ -1,7 +1,7 @@
 .index-image
 {
     display: flex;
-    background-image: url("/images/hero image.png"); 
+    background-image: url(../images/hero-image.png); 
     background-size:cover;
     background-repeat: no-repeat;
     height: 90vh;
